# j1-cpu

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: j1e_asm.csv  j1e_ast.csv  simple.fth  simple.fth-log.txt
resources/j1eforth/: j1  j1.hex
src/: console.rs  cpu.rs  functional-tests.rs  instruction.rs  j1_args.rs  j1_dump_args.rs  j1e_bin.rs  j1e_repl.rs  lib.rs  stack.rs  utils.rs
tests/: cpu_test.rs
