[package]
name = "j1"
version = "0.1.0"
edition = "2018"

[lib]
name = "j1"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "j1"
path = "bin/j1.rs"

[[bin]]
name = "j1_example_compile_and_dump"
path = "bin/j1_example_compile_and_dump.rs"

[[bin]]
name = "j1_dump"
path = "bin/j1_dump.rs"

[dependencies]
byteorder = "1.3.4"
clap = "2.33.3"
